<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg3"
    >

    <TextView
        android:id="@+id/textView_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Movie Buddy"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/button_register_movie"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/register_movie_button"
        />

    <Button
        android:id="@+id/button_display_movies"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/display_movies_button" />

    <Button
        android:id="@+id/button_favourites"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/favourites_button" />

    <Button
        android:id="@+id/button_edit_movies"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/edit_movies_button" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/search_button" />

    <Button
        android:id="@+id/button_ratings"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:text="@string/ratings_button" />
</LinearLayout>